[gd_scene format=3 uid="uid://b7555b5fwsryo"]

[ext_resource type="Script" uid="uid://c7adx0rdqhcv" path="res://Scripts/percy.gd" id="1_ga0sm"]
[ext_resource type="Texture2D" uid="uid://bxawr4yo2g4tf" path="res://Assets/Percy/Shooting_Fireball (32 x 32).png" id="2_ga0sm"]
[ext_resource type="Texture2D" uid="uid://ctqehkmrs1gtu" path="res://Assets/Percy/Hurt (32 x 32).png" id="3_ga0sm"]
[ext_resource type="Texture2D" uid="uid://bk7vb0l3qkl6d" path="res://Assets/Percy/Running (32 x 32).png" id="3_omhgw"]

[sub_resource type="AtlasTexture" id="AtlasTexture_kpqwb"]
atlas = ExtResource("2_ga0sm")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_y3qbd"]
atlas = ExtResource("2_ga0sm")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_o30rl"]
atlas = ExtResource("2_ga0sm")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_n3p0y"]
atlas = ExtResource("2_ga0sm")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xipv6"]
atlas = ExtResource("2_ga0sm")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_du1gk"]
atlas = ExtResource("2_ga0sm")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_k7tv2"]
atlas = ExtResource("2_ga0sm")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mbrdf"]
atlas = ExtResource("2_ga0sm")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_omhgw"]
atlas = ExtResource("3_ga0sm")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_opnnr"]
atlas = ExtResource("3_omhgw")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_f7pe4"]
atlas = ExtResource("3_omhgw")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_eg4o2"]
atlas = ExtResource("3_omhgw")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fygxq"]
atlas = ExtResource("3_omhgw")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_aoxio"]
atlas = ExtResource("3_omhgw")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ftu7p"]
atlas = ExtResource("3_omhgw")
region = Rect2(160, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_741ci"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kpqwb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y3qbd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o30rl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n3p0y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xipv6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_du1gk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k7tv2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mbrdf")
}],
"loop": false,
"name": &"attack",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_omhgw")
}],
"loop": false,
"name": &"dead",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_opnnr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f7pe4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eg4o2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fygxq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aoxio")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ftu7p")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_yac6a"]
radius = 8.0
height = 20.125

[sub_resource type="RectangleShape2D" id="RectangleShape2D_loyms"]
size = Vector2(16.5, 16)

[node name="Percy" type="CharacterBody2D" unique_id=925847205 groups=["enemy_body"]]
collision_layer = 16
script = ExtResource("1_ga0sm")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="." unique_id=34410839]
position = Vector2(0, 0.2)
sprite_frames = SubResource("SpriteFrames_741ci")
animation = &"dead"
autoplay = "walk"

[node name="CollisionShape2D" type="CollisionShape2D" parent="." unique_id=1683165826]
visible = false
position = Vector2(0, 6)
shape = SubResource("CapsuleShape2D_yac6a")

[node name="HitBox" type="Area2D" parent="." unique_id=1135490506 groups=["enemy_hitbox"]]
collision_layer = 32
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox" unique_id=1118961636]
position = Vector2(-1.42062e-07, 7.25)
rotation = 1.5707964
shape = SubResource("RectangleShape2D_loyms")
debug_color = Color(1, 0, 0, 0.39215687)

[node name="WallDetector" type="RayCast2D" parent="." unique_id=1087189881]
position = Vector2(0, 8)
target_position = Vector2(17, 0)

[node name="GroundDetector" type="RayCast2D" parent="." unique_id=159075341]
position = Vector2(16, 8)
target_position = Vector2(0, 10)

[node name="PlayerDetector" type="RayCast2D" parent="." unique_id=2000064058]
position = Vector2(0, 10)
target_position = Vector2(59, 0)
collision_mask = 2

[node name="FireStartPosition" type="Node2D" parent="." unique_id=965758968]
position = Vector2(16, 3)

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
